[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "kroma"
# at one point i wiped a bunch of releases off of pypi so v1 starts at 1.4.0 (the only v1 release left) and v2 starts at 2.0.1
# v2.1.1 was also removed due to some inaccuracies in the README
version = "v2.1.2"
description = "A lightweight and powerful colors library for terminal output in Python."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
license-files = ["LICEN[CS]E*"]
authors = [
    {name = "PowerPCFan", email = "charlies.retro.computing@gmail.com"}
]
maintainers = [
    {name = "PowerPCFan", email = "charlies.retro.computing@gmail.com"}
]
dependencies = [
    # Put dependencies here
]
classifiers = [
    # Uncomment to prohibit uploading
    # "Private :: Do Not Upload",

    # Development Status
    "Development Status :: 5 - Production/Stable",

    # Intended Audience
    "Intended Audience :: Developers",

    # Supported Versions
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Documentation = "https://www.powerpcfan.xyz/docs/kroma/v2/"
Repository = "https://github.com/PowerPCFan/kroma"
Issues = "https://github.com/PowerPCFan/kroma/issues"
